fix lenght desc overflow

--- a/public/CSS/tasks.css
+++ b/public/CSS/tasks.css
@@ -348,7 +348,8 @@ aside[name~=popup_modal_task] .modal-wrapper {
 .descriptif_popup {
   width: 97%;
   white-space: initial;
-  overflow: hidden;
+  overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 .descriptif_popup p {
